# PILink

./: .gitignore  Cargo.toml  README.md  forge_network.sh  generate_self_signed_cert.sh  package-lock.json  setup_pi.sh  unforge_network.sh
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  index.css
src/: main.rs
